--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/kazuhikoarase/spherical-viewer/issues"
   },
   "keywords": [
-    "spherical"
+    "spherical",
     "viewer",
     "panorama",
     "webgl",
